# hello-github-actions-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cpp-cmake.yml
